Fixed credit display on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,12 @@ footer {
       padding-left: 0;
       background-color: #212121;
     }
+
+    .credits {
+      display: block;
+      text-align: center;
+      float: none !important;
+    }
 }
 
 /*
@@ -67,6 +73,7 @@ body {
   font-weight: lighter;
   font-size: 2.8rem;
   text-align: center;
+  margin: 2.8rem 0 1.6rem 0;
 }
 
 .description {
@@ -109,31 +116,37 @@ body {
 h1 {
   font-size: 2.2rem;
   font-weight: normal;
+  margin: 1.8rem 0;
 }
 
 h2 {
   font-size: 1.8rem;
   font-weight: normal;
+  margin: 1.5rem 0;
 }
 
 h3 {
   font-size: 1.5rem;
   font-weight: normal;
+  margin: 1.2rem 0;
 }
 
 h4 {
   font-size: 2.2rem;
   font-weight: lighter;
+  margin: 1.8rem 0;
 }
 
 h5 {
   font-size: 1.8rem;
   font-weight: lighter;
+  margin: 1.5rem 0;
 }
 
 h6 {
   font-size: 1.5rem;
   font-weight: lighter;
+  margin: 1.2rem 0;
 }
 
 section img {
